--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^7.4.2"
+    "jsonwebtoken": "^9.0.1",
+    "mongoose": "^7.4.2",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1"
   }
 }
